--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,3 +2,8 @@ onlyBuiltDependencies:
   - '@parcel/watcher'
   - esbuild
   - yorkie
+
+publicHoistPattern:
+  - eslint
+  - yorkie
+  - lint-staged
